Fix playButtons cut off cards

--- a/client/src/common/game/Game.css
+++ b/client/src/common/game/Game.css
@@ -28,6 +28,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 35%; /* so the playButtons dont cut off much of the cards */
 }
 
 .gameField {
